# how2prompt-agentic

./: .clinerules  .cursorrules  .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml  setup.sh
.github/: copilot-instructions.md
.specify/: feature.json  integration.json
.specify/agents/: dev-lead-agent.md  developer-agent.md  planner-agent.md  qa-agent.md  specs-agent.md
.specify/integrations/: claude.manifest.json  cursor-agent.manifest.json  opencode.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
agent/: BA.md
app/: main.py
app/clients/: __init__.py  llm.py
app/core/: config.py  logging.py  schemas.py
app/routers/: agent.py  health.py
app/services/: optimizer.py
docs/: SRS.md  api-specs.md  architecture.md  database.md  development-workflow.md  epics.md  use-cases.md
docs/user-stories/: us-1.1-dashboard-command-palette.md  us-1.1-register-a-new-account.md  us-1.2-inline-variable-canvas.md  us-1.2-log-in-with-email-plus-password.md  us-1.3-local-draft-backup.md  us-1.3-log-in-with-google-oauth.md  us-1.4-log-out.md  us-1.4-prompt-compiler-copy.md  us-1.5-forgot-and-reset-password.md  us-1.6-verify-email.md  us-1.7-manage-personal-profile.md  us-2.1-browse-the-template-library.md  us-2.1-member-registration-login.md  (+24 more)
rules/: agent-first-workflow.md  ai-attribution-log.md  prompt-library-standards.md  security-gate-policy.md  test-coverage-standards.md
scripts/: sync.sh
specs/: constitution.md
tests/: conftest.py
(+19 files in other folders)
